# skin_app

catkin_ws/src/skin_app/: CMakeLists.txt  package.xml
catkin_ws/src/skin_app/include/skin_app/: skin.h
catkin_ws/src/skin_app/src/: skin.cpp
final_pkg/: CMakeLists.txt~  package.xml  readme.md
final_pkg/include/: final_statemachine.h
final_pkg/include/final_pkg/: final_angle.h~
final_pkg/src/: final_angle.cpp  final_main_sm.cpp  final_statemachine.cpp  final_statemachine.cpp.autosave  find_angle.cpp~
